generated/checkers/gen/AllGen-Concurrency-8bc35475ef1a23b0e224f3242eb11c76cab0ea88/build_logs/syntax-repair-05/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::scanCompound(const clang::CompoundStmt*, const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:317:74: error: invalid conversion from ‘const clang::AnalysisDeclContext*’ to ‘clang::AnalysisDeclContext*’ [-fpermissive]
  317 |         PathDiagnosticLocation::createBegin(Spot, BR.getSourceManager(), ADC);
      |                                                                          ^~~
      |                                                                          |
      |                                                                          const clang::AnalysisDeclContext*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/PointerUnion.h:138:15: note:   initializing argument 1 of ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>::PointerUnion(clang::AnalysisDeclContext*) [inherited from llvm::pointer_union_detail::PointerUnionMembers<llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>, llvm::PointerIntPair<void*, 1, int, llvm::pointer_union_detail::PointerUnionUIntTraits<const clang::LocationContext*, clang::AnalysisDeclContext*>, llvm::PointerIntPairInfo<void*, 1, llvm::pointer_union_detail::PointerUnionUIntTraits<const clang::LocationContext*, clang::AnalysisDeclContext*> > >, 1, clang::AnalysisDeclContext*>]’
  138 |   using Base::Base;
      |               ^~~~
In file included from /usr/include/c++/11/memory:76,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/Support/Casting.h:20,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LLVM.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/usr/include/c++/11/bits/unique_ptr.h: In instantiation of ‘typename std::_MakeUniq<_Tp>::__single_object std::make_unique(_Args&& ...) [with _Tp = clang::ento::BasicBugReport; _Args = {clang::ento::BugType&, const char (&)[103], clang::ento::PathDiagnosticLocation&, clang::SourceRange}; typename std::_MakeUniq<_Tp>::__single_object = std::unique_ptr<clang::ento::BasicBugReport, std::default_delete<clang::ento::BasicBugReport> >]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:319:46:   required from here
/usr/include/c++/11/bits/unique_ptr.h:962:30: error: no matching function for call to ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BugType&, const char [103], clang::ento::PathDiagnosticLocation&, clang::SourceRange)’
  962 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:3: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BugType&, llvm::StringRef, clang::ento::PathDiagnosticLocation)’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:3: note:   candidate expects 3 arguments, 4 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BasicBugReport&)’
  251 | class BasicBugReport : public BugReport {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 4 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BasicBugReport&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 4 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
